--- a/.github/workflows/run_analysis.yml
+++ b/.github/workflows/run_analysis.yml
@@ -1,7 +1,7 @@
 name: Run Smart Meter Analysis
 
 on:
-  workflow_dispatch: # Allows you to run it manually with a button
+  workflow_dispatch: # Allows you to run it manually
 
 jobs:
   build:
@@ -9,10 +9,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  # Updated to v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5 # Updated to v5
       with:
         python-version: '3.9'
 
@@ -24,7 +24,7 @@ jobs:
       run: python smart_meter.py
 
     - name: Upload Results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 # FIXED: Updated to v4
       with:
         name: analysis-plots
-        path: customer_clusters.png # This matches the filename in your script
+        path: customer_clusters.png
